# bareASGI-graphql-next

./: .gitignore  .pylintrc  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  punch_config.py  punch_version.py  pyproject.toml  requirements.txt  requirements_demos.txt  requirements_dev.txt  setup.py  versions.json
4.1/: 404.html  index.html
4.1/api/bareasgi_graphene/: index.html
4.1/api/bareasgi_graphql_next/: index.html
4.1/user-guide/clients/: index.html
4.1/user-guide/getting-started/: index.html
4.1/user-guide/installation/: index.html
5.0/: 404.html  index.html
5.0/api/bareasgi_graphene/: index.html
5.0/api/bareasgi_graphql_next/: index.html
5.0/user-guide/clients/: index.html
5.0/user-guide/getting-started/: index.html
5.0/user-guide/installation/: index.html
bareasgi_graphql_next/: __init__.py  controller.py  graphene.py  helpers.py  template.py  utils.py  websocket_handler.py  websocket_instance.py
bareasgi_graphql_next/graphene/: __init__.py  controller.py  helpers.py  websocket_handler.py  websocket_instance.py
bareasgi_graphql_next/graphql/: __init__.py  controller.py  helpers.py  websocket_handler.py  websocket_instance.py
demos/star_wars/: README.md  server.py  star_wars_data.py  star_wars_schema.py
demos/sysmon/: README.md  app.py  html_template.py  page.html  requirements.txt  server.py  system_monitor.py
demos/sysmon-client/: .env.development  .env.production  README.md  package-lock.json  package.json
demos/sysmon-client/src/: config.js  index.js  queries.js
demos/sysmon/resolvers/: query_resolver.py  subscription_resolver.py
demos/sysmon/schema/: __init__.py
demos/sysmon/services/: system_monitor.py
demos/time_subscriber/: README.md  server.py  time_schema.py
demos/time_subscriber_graphene/: README.md  server.py  time_schema.py
docs/: 404.html  Makefile  api.rst  clients.rst  conf.py  index.html  index.md  index.rst  make.bat  sitemap.xml  sse_subscriptions.rst  subscriptions.rst  ws_subscriptions.rst
docs/api/bareasgi_graphene/: index.html
docs/api/bareasgi_graphql_next/: index.html
docs/search/: search_index.json
docs/user-guide/: clients.md  getting-started.md  installation.md
docs/user-guide/clients/: index.html
docs/user-guide/getting-started/: index.html
docs/user-guide/installation/: index.html
docs/user-guide/usage/: index.html
documentation/: index.md
documentation/api/: bareasgi_graphene.md  bareasgi_graphql_next.md
documentation/user-guide/: installation.md  usage.md
latest/api/bareasgi_graphene/: index.html
latest/api/bareasgi_graphql_next/: index.html
latest/user-guide/clients/: index.html
latest/user-guide/getting-started/: index.html
latest/user-guide/installation/: index.html
src/bareasgi_graphql_next/: __init__.py  controller.py  helpers.py  template.py  utils.py  websocket_handler.py  websocket_instance.py
stable/user-guide/clients/: index.html
tests/: test_placeholder.py
(+60 files in other folders)
