[tool.poetry]
name = "bareasgi-graphql-next"
version = "4.0.0"
description = "GraphQL support for the bareASGI framework"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_graphql_next" },
]
repository = "https://github.com/rob-blackbourn/bareasgi-graphql-next"

[tool.poetry.dependencies]
python = "^3.7"
bareASGI = "^3"
bareutils = "^3"
graphql-core = "^3.1"
graphene = {version = "^3.0b6", optional = true, allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
uvicorn = "^0.11"
hypercorn = "^0.7.2"
pylint = "^2.3"
mypy = "^0.720.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.7"
autopep8 = "^1.5"

[tool.poetry.extras]
graphene = [ "graphene" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
