[tool.poetry]
name = "bareasgi-graphql-next"
version = "5.0.0.alpha.0"
description = "GraphQL support for the bareASGI framework"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_graphql_next" },
]
repository = "https://github.com/rob-blackbourn/bareasgi-graphql-next"

[tool.poetry.dependencies]
python = "^3.7"
bareASGI = "^4.0.0-alpha.1"
graphql-core = "^3.1"
graphene = {version = "^3.0b7", optional = true, allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.10"
mypy = "^0.910"
autopep8 = "^1.5"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"
Hypercorn = "^0.11"
uvicorn = "^0.15"
types-setuptools = "^57.4.0"

[tool.poetry.extras]
graphene = [ "graphene" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
