[tool.poetry]
name = "bareasgi-graphql-next"
version = "5.0.4"
description = "GraphQL support for the bareASGI framework"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_graphql_next" },
]
repository = "https://github.com/rob-blackbourn/bareasgi-graphql-next"

[tool.poetry.dependencies]
python = "^3.8"
bareASGI = "^4.0.0"
graphql-core = "^3.1"
graphene = {version = "^3.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.12"
mypy = "^0.931"
autopep8 = "^1.6"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1"
Hypercorn = "^0.11"
uvicorn = "^0.15"
types-setuptools = "^57.4"

[tool.poetry.extras]
graphene = [ "graphene" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
